<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.user.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_helper"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:padding="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="64dp"
                android:background="@drawable/edit_input"
                android:drawablePadding="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_input"
                android:drawablePadding="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/edt_name"
                app:layout_constraintStart_toStartOf="@+id/edt_name"
                app:layout_constraintTop_toBottomOf="@+id/edt_name"  />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_input"
                android:drawablePadding="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/edt_email"
                app:layout_constraintStart_toStartOf="@+id/edt_email"
                app:layout_constraintTop_toBottomOf="@+id/edt_email" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/custom_input"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="@+id/edt_password"
                app:layout_constraintStart_toStartOf="@+id/edt_password"
                app:layout_constraintTop_toBottomOf="@+id/edt_password" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btn_register"
                app:layout_constraintStart_toStartOf="@+id/btn_register"
                app:layout_constraintTop_toBottomOf="@+id/btn_register" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:progress="200"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>