<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.task.DetailTaskActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_helper"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:padding="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_name_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold|normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/custom_input"
                android:text="@string/simpan"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/floating_add_image" />

            <Button
                android:id="@+id/button_navigation"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/custom_input"
                android:text="@string/navigasi"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/button_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_save" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_name_detail"
                app:layout_constraintStart_toStartOf="@+id/tv_name_detail"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_detail"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floating_add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:srcCompat="@drawable/ic_camera" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:progress="200"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>